--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -144,16 +144,6 @@
             </li>
 
             <li class="nav-item">
-              <a href="../examples/categorias.html" class="nav-link">
-                <i class="nav-icon fas fa-th"></i>
-                <p>
-                  Categorias
-
-                </p>
-              </a>
-            </li>
-
-            <li class="nav-item">
               <a href="#" class="nav-link">
                 <i class="nav-icon fas  fa-store"></i>
                
@@ -169,6 +159,13 @@
                   <a href="../examples/inventario.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Inventario</p>
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a href="../examples/categorias.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Categorias</p>
                   </a>
                 </li>
 
@@ -310,8 +307,16 @@
                       </p>
                     </a>
                   </li>
-    
                 </ul>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/roles.html" class="nav-link">
+                  <i class="nav-icon fas fa-table"></i>
+                  <p>
+                    Seguridad
+                  </p>
+                </a>
               </li>
 
               <li class="nav-item">
@@ -420,7 +425,7 @@
               </tr>
 
               <tr>
-                <td>02</td>
+                <td>2</td>
                 <td>01-03-2022 al 15-03-2022</td>
                 <td>Pantalones</td>
                 <td>20</td>
@@ -491,6 +496,10 @@
   <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
+
+<!-- Bootstrap 5 -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
