--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -142,15 +142,6 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </ul>
             </li>
 
-            <li class="nav-item">
-              <a href="../examples/categorias.html" class="nav-link">
-                <i class="nav-icon fas fa-th"></i>
-                <p>
-                  Categorias
-
-                </p>
-              </a>
-            </li>
 
             <li class="nav-item">
               <a href="#" class="nav-link">
@@ -168,6 +159,13 @@ scratch. This page gets rid of all links and provides the needed markup only.
                   <a href="../examples/inventario.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Inventario</p>
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a href="../examples/categorias.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Categorias</p>
                   </a>
                 </li>
 
@@ -311,6 +309,16 @@ scratch. This page gets rid of all links and provides the needed markup only.
 
             </ul>
           </li>
+
+          <li class="nav-item">
+            <a href="../examples/roles.html" class="nav-link">
+              <i class="nav-icon fas fa-table"></i>
+              <p>
+                Seguridad
+              </p>
+            </a>
+          </li>
+
              
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
@@ -559,6 +567,11 @@ scratch. This page gets rid of all links and provides the needed markup only.
   <!-- ./wrapper -->
 
   <!-- REQUIRED SCRIPTS -->
+
+
+  <!-- Bootstrap 5 -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <!-- jQuery -->
   <script src="../../plugins/jquery/jquery.min.js"></script>
