--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -130,22 +130,11 @@
                   
                 </ul>
               </li>
-    
-          <li class="nav-item">
-            <a href="../examples/categorias.html" class="nav-link">
-              <i class="nav-icon fas fa-th"></i>
-              <p>
-                Categorias
-                
-              </p>
-            </a>
-          </li>
+  
 
           <li class="nav-item">
             <a href="#" class="nav-link">
               <i class="nav-icon fas  fa-store"></i>
-             
-             
               <p>
                 Inventario
                 <i class="fas fa-angle-left right"></i>
@@ -157,6 +146,13 @@
                 <a href="../examples/inventario.html" class="nav-link">
                   <i class="far fa-circle nav-icon"></i>
                   <p>Inventario</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/categorias.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Categorias</p>
                 </a>
               </li>
 
@@ -297,6 +293,17 @@
                 </li>
   
               </ul>
+
+              <li class="nav-item">
+                <a href="../examples/roles.html" class="nav-link">
+                  <i class="nav-icon fas fa-table"></i>
+                  <p>
+                    Seguridad
+                  </p>
+                </a>
+              </li>
+
+              
             </li>
             <li class="nav-item">
               <a href="../examples/contactanos.html" class="nav-link">
@@ -762,6 +769,11 @@
   <!-- /.control-sidebar -->
 </div>
 <!-- ./wrapper -->
+
+
+<!-- Bootstrap 5 -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 
 <!-- jQuery -->
 <script src="../../plugins/jquery/jquery.min.js"></script>
