Agg Bitacora and backup

--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -320,6 +320,25 @@
               </li>
 
               <li class="nav-item">
+                <a href="../examples/BackUp.html" class="nav-link">
+                  <i class="nav-icon fas  fa-archive"></i>
+               
+                  <p>
+                    BackUp
+                  </p>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a href="../examples/Bitacora.html" class="nav-link">
+                  <i class="nav-icon fas  fa-calendar"></i>
+               
+                  <p>
+                    Bitacora
+                  </p>
+                </a>
+              </li> 
+
+              <li class="nav-item">
                 <a href="../examples/contactanos.html" class="nav-link">
                   <i class="nav-icon far fa-envelope"></i>
                   <p>
