--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -318,6 +318,24 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </p>
             </a>
           </li>
+          <li class="nav-item">
+            <a href="../examples/BackUp.html" class="nav-link">
+              <i class="nav-icon fas  fa-archive"></i>
+           
+              <p>
+                BackUp
+              </p>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a href="../examples/Bitacora.html" class="nav-link">
+              <i class="nav-icon fas  fa-calendar"></i>
+           
+              <p>
+                Bitacora
+              </p>
+            </a>
+          </li>
 
              
                 <li class="nav-item">
