--- a/pages/layout/top-nav copy.html
+++ b/pages/layout/top-nav copy.html
@@ -280,6 +280,49 @@
 
               </ul>
             </li>
+
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-table"></i>
+                <p>
+                  Seguridad
+                  <i class="fas fa-angle-left right"></i>
+                </p>
+              </a>
+
+              <ul class="nav nav-treeview">
+
+                <li class="nav-item">
+                  <a href="../examples/roles.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Permisos Establecidos</p>
+                  </a>
+                </li>
+
+                <li class="nav-item">
+                  <a href="../examples/usuariosroles.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Usuarios Roles</p>
+                  </a>
+                </li>    
+
+                <li class="nav-item">
+                <a href="../examples/BackUp.html" class="nav-link">
+                <i class="far fa-circle nav-icon"></i>
+                <p>BackUp</p>
+                </a>
+                </li>
+                
+
+                <li class="nav-item">
+                  <a href="../examples/Bitacora.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Bitacora</p>
+                    </a>
+                    </li>               
+          </ul>
+        </li>
+
             <li class="nav-item">
               <a href="../examples/contactanos.html" class="nav-link">
                 <i class="nav-icon far fa-envelope"></i>
