--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -311,32 +311,46 @@ scratch. This page gets rid of all links and provides the needed markup only.
           </li>
 
           <li class="nav-item">
-            <a href="../examples/roles.html" class="nav-link">
+            <a href="#" class="nav-link">
               <i class="nav-icon fas fa-table"></i>
               <p>
                 Seguridad
+                <i class="fas fa-angle-left right"></i>
               </p>
             </a>
-          </li>
-          <li class="nav-item">
-            <a href="../examples/BackUp.html" class="nav-link">
-              <i class="nav-icon fas  fa-archive"></i>
-           
-              <p>
-                BackUp
-              </p>
-            </a>
-          </li>
-          <li class="nav-item">
-            <a href="../examples/Bitacora.html" class="nav-link">
-              <i class="nav-icon fas  fa-calendar"></i>
-           
-              <p>
-                Bitacora
-              </p>
-            </a>
-          </li>
 
+            <ul class="nav nav-treeview">
+
+              <li class="nav-item">
+                <a href="../examples/roles.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Permisos Establecidos</p>
+                </a>
+              </li>
+
+              <li class="nav-item">
+                <a href="../examples/usuariosroles.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Usuarios Roles</p>
+                </a>
+              </li>    
+
+              <li class="nav-item">
+              <a href="../examples/BackUp.html" class="nav-link">
+              <i class="far fa-circle nav-icon"></i>
+              <p>BackUp</p>
+              </a>
+              </li>
+              
+
+              <li class="nav-item">
+                <a href="../examples/Bitacora.html" class="nav-link">
+                  <i class="far fa-circle nav-icon"></i>
+                  <p>Bitacora</p>
+                  </a>
+                  </li>               
+        </ul>
+      </li>
              
                 <li class="nav-item">
                   <a href="../examples/contactanos.html" class="nav-link">
