--- a/pages/layout/boxed copy.html
+++ b/pages/layout/boxed copy.html
@@ -249,7 +249,7 @@
 
               <li class="nav-item">
                 <a href="#" class="nav-link">
-                  <i class="nav-icon fas   fa-warehouse"></i>
+                  <i class="nav-icon fas fa-book"></i>
                  
                  
                   <p>
