--- a/pages/layout/top-nav copy.html
+++ b/pages/layout/top-nav copy.html
@@ -241,7 +241,7 @@
               </ul>
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="nav-icon fas   fa-warehouse"></i>
+                <i class="nav-icon fas fa-book"></i>
 
 
                 <p>
