--- a/pages/layout/top-nav-sidebar.html
+++ b/pages/layout/top-nav-sidebar.html
@@ -248,7 +248,7 @@ scratch. This page gets rid of all links and provides the needed markup only.
               </ul>
           <li class="nav-item">
             <a href="#" class="nav-link">
-              <i class="nav-icon fas   fa-warehouse"></i>
+              <i class="nav-icon fas fa-book"></i>
              
              
               <p>
