--- a/pages/layout/top-nav-sidebar copy.html
+++ b/pages/layout/top-nav-sidebar copy.html
@@ -301,45 +301,83 @@
 
             <li class="nav-item">
               <a href="#" class="nav-link">
-                <i class="nav-icon fas fa-table"></i>
+                <i class="nav-icon fas fa-sliders-h"></i>
                 <p>
-                  Seguridad
+                  Configuración
                   <i class="fas fa-angle-left right"></i>
                 </p>
               </a>
-
+  
               <ul class="nav nav-treeview">
-
+  
                 <li class="nav-item">
-                  <a href="../examples/roles.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Permisos Establecidos</p>
+                  <a href="#" class="nav-link">
+                    <i class="nav-icon fas fa-key"></i>
+                    <p>
+                      Seguridad
+                      <i class="fas fa-angle-left right"></i>
+                    </p>
                   </a>
-                </li>
-
-                <li class="nav-item">
-                  <a href="../examples/usuariosroles.html" class="nav-link">
+      
+                  <ul class="nav nav-treeview">
+      
+                    <li class="nav-item">
+                      <a href="../examples/roles.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Permisos Establecidos</p>
+                      </a>
+                    </li>
+      
+                    <li class="nav-item">
+                      <a href="../examples/usuariosroles.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Usuarios Roles</p>
+                      </a>
+                    </li>    
+      
+                    <li class="nav-item">
+                    <a href="../examples/BackUp.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
-                    <p>Usuarios Roles</p>
-                  </a>
-                </li>    
-
-                <li class="nav-item">
-                <a href="../examples/BackUp.html" class="nav-link">
-                <i class="far fa-circle nav-icon"></i>
-                <p>BackUp</p>
-                </a>
-                </li>
-                
-
-                <li class="nav-item">
-                  <a href="../examples/Bitacora.html" class="nav-link">
-                    <i class="far fa-circle nav-icon"></i>
-                    <p>Bitacora</p>
+                    <p>BackUp</p>
                     </a>
+                    </li>
+                    
+      
+                    <li class="nav-item">
+                      <a href="../examples/Bitacora.html" class="nav-link">
+                        <i class="far fa-circle nav-icon"></i>
+                        <p>Bitacora</p>
+                        </a>
                     </li>               
+              </ul>
+            </li>
+  
+                              
           </ul>
-        </li>
+          <ul class="nav nav-treeview">
+  
+            <li class="nav-item">
+              <a href="#" class="nav-link">
+                <i class="nav-icon fas fa-edit"></i>
+                <p>
+                  Personalizar
+                  <i class="fas fa-angle-left right"></i>
+                </p>
+              </a>
+  
+              <ul class="nav nav-treeview">
+  
+                <li class="nav-item">
+                  <a href="../examples/Impuesto.html" class="nav-link">
+                    <i class="far fa-circle nav-icon"></i>
+                    <p>Impuesto</p>
+                  </a>
+                </li>             
+              </ul>
+            </li>
+                        
+          </ul>
+      </li>
 
 
           <li class="nav-item">
@@ -350,7 +388,7 @@
               </p>
             </a>
           </li>
-          
+        </ul> 
       </nav>
       <!-- /.sidebar-menu -->
     </div>
