--- a/pages/layout/ver.html
+++ b/pages/layout/ver.html
@@ -397,12 +397,12 @@
       <div class="container-fluid">
         <div class="row mb-2">
           <div class="col-sm-6">
-            <h1>Administrador de Ventas</h1>
+            <h1 class="m-0 text-dark">Detalle de Venta</h1>
           </div>
           <div class="col-sm-6">
             <ol class="breadcrumb float-sm-right">
-              <li class="breadcrumb-item"><a href="#">Inicio</a></li>
-              <li class="breadcrumb-item active">Administrador de Ventas</li>
+              <li class="breadcrumb-item"><a href="../../index.html">Inicio</a></li>
+              <li class="breadcrumb-item active">Detalle de Venta</li>
             </ol>
           </div>
         </div>
@@ -413,429 +413,116 @@
     <section class="content">
 
       <!-- Default box -->
-      <div class="card">
-        <div class="card-header">
+      <div class="card acciones">
+	
+          <div class="card-header">
 
-
-          <div class="col-2"><a href="top-nav-sidebar.html">
-              <button class="btn btn-success">
-                Nueva Venta
-              </button>
-            </a></div>
-        </div>
-        <div class="card-body">
-          <table id="tablas" class="table table-bordered table-striped">
+            <span class="float-left">
+              <a class="btn btn-outline-success" href="top-nav-sidebar.html" role="button" >Nueva Venta</a>
+            </span>
+            
+            
+          <span class="float-right">
+            <a class="btn btn-warning" href="index.php?vista=editarOperacion&codigo=56&tipo=2" role="button" >.</a>
+            <a class="btn btn-info" href="#" role="button" target="_blank">Imprimir</a>
+            </span>
+          
+            
+          
+          
+          </div>
+          
+          </div> 
+          
+            <div class="row">
+            
+            <div class="col-1"></div>
+            
+              <div class="col-sm">
+              <div class="card w-40 bg-info text-white" style="width: 18rem;">
+              <div class="card-header"><strong> Fecha: </strong>13-01-2020 16:00:02</div>
+              <ul class="list-group list-group-flush">
+                
+                <li class="list-group-item text-dark"><strong>Cliente : </strong>Claudio Soborno</li>
+                
+                <li class="list-group-item text-dark"><strong>Vendedor : </strong>admin</li>
+              </ul>
+              </div>
+              </div>
+              
+              <div class="col-sm">
+              <div class="card w-40 bg-info text-white" style="width: 18rem;">
+              <div class="card-header">Pago</div>
+              <ul class="list-group list-group-flush">
+                <li class="list-group-item text-dark">Efectivo</li>
+                      </ul>
+              </div>
+              </div>
+          
+            </div>
+        
+            
+        <div class="row d-flex justify-content-center">
+        
+        <div class="col-xs-12 col-md-10">
+        <div class="card">
+         <table class="card-table table table-responsive-sm">
             <thead>
-
-              <tr>
-
-                <th style="width:10px">N_Factura</th>
-                <th>Fecha Ventas</th>
-                <th>Cliente</th>
-                <th>Usuario</th>
-                <th>Impuesto</th>
-                <th>Total</th>
-                <th>Acciones</th>
-
+              <tr class="table-info">
+                <th scope="col">Cantidad</th>
+                <th scope="col">Codigo</th>
+                <th scope="col">Producto</th>
+                <th scope="col">Unitario</th>
+                <th scope="col">Total</th>
               </tr>
-
             </thead>
-
+          
             <tbody>
-
-              <tr>
-                <td>00189</td>
-                <td>22-03-2022</td>
-                <td>irv Rosa</td>
-                <td>Vendedor</td>
-                <td>0.15</td>
-                <td>L.20,00</td>
-
-                <td>
-
-                  <div class="btn-group">
-
-                    <span class="btn-group">
-                      <a class="btn btn-dark" href="ver.html" role="button" > <i class="fa fa-eye"></i>
-                      <a class="btn btn-danger" href="ver.html" role="button" > <i class="fa fa-times"></i></a>
-                    </span>
-
-                  </div>
-
-                </td>
-
-              </tr>
-
-              <tr>
-                <td>0099</td>
-                <td>23-03-2022</td>
-                <td>nanisha Brown</td>
-                <td>Vendedor</td>
-                <td>0.15</td>
-                <td>L.500</td>
-
-
-                <td>
-
-                  <div class="btn-group">
-
-                    <span class="btn-group">
-                      <a class="btn btn-dark" href="ver.html" role="button" > <i class="fa fa-eye"></i>
-                      <a class="btn btn-danger" href="ver.html" role="button" > <i class="fa fa-times"></i></a>
-                    </span>
-
-                  </div>
-
-                </td>
-
-              </tr>
-
-              <tr>
-                <td>0008</td>
-                <td>24-03-2022</td>
-                <td>Luis Mendez</td>
-                <td>Vendedor</td>
-                <td>0.15</td>
-                <td>L. 400</td>
-
-
-                <td>
-
-                  <div class="btn-group">
-
-                    <span class="btn-group">
-                    <a class="btn btn-dark" href="ver.html" role="button" > <i class="fa fa-eye"></i>
-                    <a class="btn btn-danger" href="ver.html" role="button" > <i class="fa fa-times"></i></a>
-                  </span>
-                  </div>
-
-                </td>
-
-              </tr>
-
-              <tr>
-                <td>0056</td>
-                <td>25-03-2022</td>
-                <td>Juan Martinez</td>
-                <td>Vendedor</td>
-                <td>0.15</td>
-                <td>L.800</td>
-
-                <td>
-
-                  <div class="btn-group">
-
-                    <span class="btn-group">
-                      <a class="btn btn-dark" href="ver.html" role="button" > <i class="fa fa-eye"></i>
-                      <a class="btn btn-danger" href="ver.html" role="button" > <i class="fa fa-times"></i></a>
-                    </span>
-                  </div>
-
-                </td>
-
-              </tr>
-
-
-
-
+            
+        <tr>
+              <td><center>10</center></td>
+                <td>UDJ10</td>
+                <td>Monograma</td>
+                <td> L. 36.50</td>
+                <td> L. 365.00</td>
+        </tr>      
             </tbody>
-
           </table>
+          </div>
+          </div>
+          </div>
+          
+              <div class="row">
+            
+            <div class="col-xs-0 col-md-8"></div>
+            
+              <div class="col-2">
+              <div class="card bg-info text-white" style="width: 16rem;">
+              <div class="card-header"><strong>Items : </strong>1 &nbsp &nbsp &nbsp <strong>Productos : </strong>10</div>
+              <ul class="list-group list-group-flush">
+                        <li class="list-group-item text-info"><strong>Descuento : </strong> L.0.00</li>
+                        <li class="list-group-item text-info"><strong>Impuesto : </strong> L.54.75</li>
+                        <li class="list-group-item text-info"><strong>Total : </strong> L. 419.75</li>
+              </ul>
+              </div>
+              </div>
+                </div>
+        
         </div>
-        <!-- /.card-body -->
+        
+        <footer class="main-footer">
+          <div class="float-right d-none d-sm-block">
+      
+          </div>
+          <strong>Copyright &copy; 2022 <a href="">Tienda Militar HN</a>.</strong> Todos los derechos reservados..
+        </footer>
+      
+        <!-- Control Sidebar -->
+        <aside class="control-sidebar control-sidebar-dark">
+          <!-- Control sidebar content goes here -->
+        </aside>
 
       </div>
-      <!-- /.card -->
-
-    </section>
-    <!-- /.content -->
-  </div>
-  <!-- /.content-wrapper -->
-
-  <!--=====================================
-   MODAL AGREGAR PROVEEDOR
-======================================-->
-
-
-
-<div class="modal fade" id="#" data-backdrop="static"> <!-- Modal padre de todo el contenido -->
-  <div class="modal-dialog modal-xl modal-dialog-centered modal-dialog-scrollable">
-    <div class="modal-content"> <!-- Elemento hijos-->
-      <form role="form" method="post">
-      <!--=====================================
-      CABEZA DEL MODAL
-      ======================================-->
-      <div class="modal-header"><!--Elemento hijos(Titulo subtitulo o parafo)--> 
-        <h4 class="modal-title">Agregar Nueva Venta</h4>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-       <!--=====================================
-      CUERPO DEL MODAL
-      ======================================-->
-      <div class="modal-body"> <!-- Elemento hijos(puede ir todo el contenido del modal)-->
-
-        <!-- ENTRADA PARA EL Numero de Venta -->
-          
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"></span> 
-
-            <input type="text" class="form-control input-lg" name="numeroVenta" placeholder="Ingresar Numero de Venta" required>
-
-          </div>
-
-        </div>
-
-        <!-- ENTRADA PARA EL Vendedor -->
-          
-        
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <select class="form-control input-lg" name="nombcliente">
-              
-              <option value="">--Selecionar un Vendedor--</option>
-
-              <option value="Vendedor">Juan Martinez</option>
-
-              <option value="Vendedor">Luis Santos</option>
-
-            </select>
-
-          </div>
-
-        </div>
-
-        
-
-        <!-- ENTRADA PARA LA FECHA DE NACIMIENTO -->
-          
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"></span> 
-
-            <input type="date" class="form-control input-lg" name="nuevoFecha" placeholder="Ingresar Fecha de v" required>
-
-          </div>
-
-        </div>
-
-
-        <!-- ENTRADA PARA EL USUARIO (cliente)-->
-
-        
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <select class="form-control input-lg" name="nombcliente">
-              
-              <option value="">--Selecionar un cliente--</option>
-
-              <option value="Vendedor">Juan Martinez</option>
-
-              <option value="Vendedor">Luis Santos</option>
-
-            </select>
-
-          </div>
-
-        </div>
-
-        <!-- ENTRADA PARA EL NOMBRE del Articulo -->
-
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <select class="form-control input-lg" name="nombcliente">
-              
-              <option value="">--Selecionar un Articulo--</option>
-
-              <option value="Articulo">Articulo 1</option>
-
-              <option value="Articulo">Articulo 2</option>
-
-              <option value="Articulo">Articulo 1</option>
-
-              <option value="Articulo">Articulo 2</option>
-
-            </select>
-
-          </div>
-
-        </div>
-
-        <!-- ENTRADA PARA LA Cantidad-->
-
-        <div class="form-group">
-          
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <input type="number" class="form-control input-lg" name="nuevaCantidad" placeholder="Ingresar Cantidad" required>
-
-          </div>
-
-        </div>
-
-        <!-- ENTRADA PARA Precio-->
-          
-         <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"></span> 
-
-            <input type="text" class="form-control input-lg" name="pUnitario" placeholder="Precio" required>
-
-          </div>
-
-        </div>
-
-       
-        <!-- ENTRADA PARA LA precio total-->
-          
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <input type="text" class="form-control input-lg" name="pTotal" placeholder="Precio Total" required>
-
-          </div>
-
-        </div>
-
-
-        <!-- ENTRADA PARA EL TELÉFONO -->
-          
-        <div class="form-group">
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <input type="number" class="form-control input-lg" step="0.5" name="descuento" placeholder="Descuento" autocomplete="off">
-
-          </div>
-
-        </div>
-
-         <!-- ENTRADA PARA SELECCIONAR SU PERFIL -->
-
-            
-          <div class="input-group">
-          
-            <span class="input-group-addon"><i class=""></i></span> 
-
-            <select class="form-control input-lg" name="Metodo de Pago">
-              
-              <option value="">--Selecionar una Opción--</option>
-
-              <option value="Administrador">Efectivo</option>
-
-              <option value="Especial">Tarjeta</option>
-
-            </select>
-
-          </div>
-          <div class="form-group col-md-1 contenedor-boton">
-            <button class="btn btn-primary" type="submit">Aggregar</button>
-          </div>
-
-
-        <!-- ENTRADA PARA tablas -->
-    <section class="row ">
-        <div class="col">
-
-            <table class="table text-center">
-                <thead>
-                    <tr>
-                        <th>Acción</th>
-                        <th>Articulo</th>
-                        <th>Cantidad</th>
-                        <th>Precio U.</th>
-                        <th>Descuento</th>
-                        <th>Subtotal</th>
-                        <th>Total</th>
-                        <th>Impuesto</th>
-                        <th>Total a pagar</th>
-                    </tr>
-                </thead>
-                <tbody id="CuerpoTabla">
-
-                  <tbody>
-            
-                    <tr>
-                      <td>
-          
-                        <button class="btn btn-danger"><i class="fa fa-times"></i></button>
-        
-                      </td>
-                      <td>Producto1</td>
-                      <td>2</td>
-                      <td>20,000</td>
-                      <td>0.00</td>
-                      <td>L.40,000</td>
-                      <td>40,000</td>
-                      <td>0.15</td>
-                      <td>L.41,400</td>
-          
-                    </tr>
-                </tbody>
-
-            </table>
-
-        </div>
-
-    </section>
-  </div>
-      <div class="modal-footer justify-content-between"><!-- Elemento hijos(pie de pagina se puede poner botton)-->
-        <button type="button" class="btn btn-danger" data-dismiss="modal">Cerrar</button>
-        <button type="button" class="btn btn-primary">Guardar Venta</button>
-      </div>
-
-    </form>
-    </div>
-    <!-- /.modal-content -->
-  </div>
-  <!-- /.modal-dialog -->
-</div>
-
-
-
-
-  <footer class="main-footer">
-    <div class="float-right d-none d-sm-block">
-
-    </div>
-    <strong>Copyright &copy; 2022 <a href="">Tienda Militar HN</a>.</strong> Todos los derechos reservados..
-  </footer>
-
-  <!-- Control Sidebar -->
-  <aside class="control-sidebar control-sidebar-dark">
-    <!-- Control sidebar content goes here -->
-  </aside>
-  <!-- /.control-sidebar -->
-</div>
-<!-- ./wrapper -->
-
 
 <!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
