--- a/pages/layout/top-nav.html
+++ b/pages/layout/top-nav.html
@@ -244,7 +244,7 @@
               </a>
               <ul class="nav nav-treeview">
                 <li class="nav-item">
-                  <a href="reporte_inventario.html" class="nav-link">
+                  <a href="../examples/reporte_inventario.html" class="nav-link">
                     <i class="far fa-circle nav-icon"></i>
                     <p>Reporte de Inventario</p>
                   </a>
